added some thing to my class reference page

--- a/my_class_reference.rmd
+++ b/my_class_reference.rmd
@@ -1,6 +1,6 @@
 ---
 title: "Class Reference"
-author: "Student name"
+author: "Kiersten Hacker"
 output:
   html_document:
     theme: cerulean
@@ -13,6 +13,10 @@ output:
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+```
+
+```{r}
+print("Hello Puppy!")
 ```
 
 ## Introduction
@@ -33,3 +37,10 @@ setwd("~/Documents/GitHub/data_journalism_2023_spring")
 install.packages("tidyverse")
 library(tidyverse)
 ```
+
+### How to read in a CSV file from the internet
+
+```{r}
+wes_moore_contributions <- read_csv("https://raw.githubusercontent.com/stephenneukam/CNS_Annapolis/main/Campaign_finance/Moore_ContributionsList.csv")
+```
+
